# antigravity-agent

./: README.md  package-lock.json  package.json
.github/workflows/: autobuild.yml  release.yml  updater.yml
docs/: RELEASE.md
scripts/: bump-version.sh
src/: App.tsx  AppUserPanel.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: directories.rs  main.rs  setup.rs
src-tauri/src/antigravity/: account_operations.rs  cleanup.rs  mod.rs  path_config.rs  starter.rs
src-tauri/src/commands/: account_commands.rs  platform_commands.rs  process_commands.rs
src-tauri/src/language_server/: cache.rs  commands.rs  macos.rs  types.rs  utils.rs
src-tauri/src/platform/: antigravity.rs  process.rs
src-tauri/src/utils/: tracing_config.rs
src/commands/: AccountCommands.ts  AccountManageCommands.ts
src/commands/types/: account.types.ts  platform.types.ts
src/components/: Toolbar.tsx
src/components/app/: AppContent.tsx  AppToolbar.tsx
src/components/business/: AccountDetailModal.tsx  AccountSessionList.tsx  SettingsDialog.tsx  UserDetail.tsx
src/components/ui/: system-tray-switch.tsx
src/hooks/: use-antigravity-process.ts  useTrayMenu.ts
src/modules/: use-antigravity-account.ts  use-available-models.ts
src/modules/config-management/: useConfigStore.ts
src/services/: antigravity-path-service.ts  antigravity-service.ts
src/stories/: AccountSessionList.stories.tsx
src/types/: tauri.ts
src/utils/: string-masking.ts
