[package]
name = "antigravity-agent"
version = "1.0.3"
description = "Antigravity Agent - Profile backup and account management tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2.0.0"

# Tracing 生态系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
tracing-attributes = "0.1"

base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
zip = "2.2"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.25"
regex = "1.10"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
walkdir = "2.5"
anyhow = "1"
read-process-memory = "0.1"
moka = { version = "0.12", features = ["future"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
